src/test/deca/context/invalid/expressions/or_readint.deca
// Description:
//    Test des operateur binaire avec readint
//
// Resultats:
//    context: erreur de type int et bool`
//
// Historique:
//    cree le 13/01/2022

{
    true || readInt();
}